syntax = "proto3";
package storage;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

service Storage {
  // Read performs a read operation using the given ReadRequest
  rpc Read (ReadRequest) returns (stream ReadResponse) {
  }

  // Capabilities returns a map of keys and values identifying the capabilities supported by the storage engine
  rpc Capabilities (google.protobuf.Empty) returns (CapabilitiesResponse) {
  }

  rpc Hints (google.protobuf.Empty) returns (HintsResponse) {
  }

  // Explain describes the costs associated with executing a given Read request
  // rpc Explain(google.protobuf.Empty) returns (ExplainResponse){}
}

message ReadRequest {
  string database = 1;
  TimestampRange timestamp_range = 2 [(gogoproto.customname) = "TimestampRange", (gogoproto.nullable) = false];
  bool descending = 3;

  // Grouping specifies a list of tags used to order the data
  repeated string grouping = 4;
}

message ReadResponse {
  enum FrameType {
    option (gogoproto.goproto_enum_prefix) = false;

    SERIES = 0 [(gogoproto.enumvalue_customname) = "FrameTypeSeries"];
    POINTS = 1 [(gogoproto.enumvalue_customname) = "FrameTypePoints"];
  }

  message SeriesFrame {
    string name = 1;
  }

  message PointsFrame {
    bytes points = 1;
  }

  bytes frames = 1;
}

message CapabilitiesResponse {
  map<string, string> caps = 1;
}

message HintsResponse {
}

// Specifies a continuous range of nanosecond timestamps.
message TimestampRange {
  // Start defines the inclusive lower bound.
  int64 start = 1;

  // End defines the inclusive upper bound.
  int64 end = 2;
}

//message ExplainRequest {
//  ReadRequest read_request = 1 [(gogoproto.customname) = "ReadRequest"];
//}
//
//message ExplainResponse {}
